test/cases/compile_errors/threadlocal_qualifier_on_const.zig
threadlocal const x: i32 = 1234;
export fn entry() i32 {
    return x;
}

// error
//
// :1:1: error: threadlocal variable cannot be constant
